@@ -1,5 +1,6 @@
 package ae.gov.tdra.ssir.api.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -10,28 +11,28 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
+    @Value("${cors.allowed-origins:http://localhost:4200}")
+    private List<String> allowedOrigins;
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-            // 1. Enable CORS directly in the security filter chain
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             
-            // 2. Disable CSRF for stateless REST APIs
-            .csrf(AbstractHttpConfigurer::disable)
+           
+            .csrf(AbstractHttpConfigurer::disable) 
             
-            // 3. Configure endpoint authorization rules
             .authorizeHttpRequests(auth -> auth
-                // Explicitly permit ALL HTTP OPTIONS (preflight) handshakes globally
                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                
-                // Allow public access to our onboarding APIs for testing
-                .requestMatchers("/api/**", "/error").permitAll() // Added "/error"
+                .requestMatchers("/api/v1/registrations", "/error").permitAll()
                 .anyRequest().authenticated()
             );
 
@@ -42,12 +43,12 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // Use setAllowedOriginPatterns with "*" instead of setAllowedOrigins.
-        // This is fully compatible with allowCredentials(true) and dynamically whitelists port 4200.
-        configuration.setAllowedOriginPatterns(List.of("*"));
+        configuration.setAllowedOrigins(allowedOrigins);
         
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*")); 
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept")); 
+        
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
